services/demo-api/deployments/k8s_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: demo-api
  labels: { app: "demo-api" }
spec:
  replicas: 3
  selector:
    matchLabels: { app: "demo-api" }
  strategy:
    rollingUpdate: { maxSurge: 1, maxUnavailable: 0 }
    type: RollingUpdate
  template:
    metadata:
      labels: { app: "demo-api" }
    spec:
      restartPolicy: Always
      # nodeSelector:
      #   node-role: worker
      volumes:
      - name: config
        configMap: { name: demo-api }
      - name: local
        hostPath: { path: "/data/local", type: "DirectoryOrCreate" }
      - name: pvc
        persistentVolumeClaim: { claimName: "k8s-cp01" }
      containers:
      - name: demo-api
        # image: registry.cn-shanghai.aliyuncs.com/d2jvkpn/demo-api:master-0.1.0@sha256xxxx
        image: registry.cn-shanghai.aliyuncs.com/d2jvkpn/demo-api:dev
        ## imagePullPolicy: IfNotPresent, Always, Never
        imagePullPolicy: "Always"
        resources:
          requests: { cpu: "200m", memory: "128Mi", ephemeral-storage: "2Gi" }
          limits: { cpu: "1000m", memory: "512Mi", ephemeral-storage: "4Gi" }
        livenessProbe:
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
          ## HTTP Status >= 200 and < 400
          # httpGet:
          #   path: "/healthz"
          #   port: 5032
          #   httpHeaders:
          #   - { name: Custom-Header, value: Awesome }
          grpc: { port: 5042 }
        volumeMounts:
        ## not /app/configs/dev.yaml
        - { name: config, mountPath: /app/configs, readOnly: true }
        - { name: local, subPathExpr: "$(K8S_Pod)/logs", mountPath: "/app/logs" }
        - { name: pvc, subPathExpr: "$(K8S_Pod)/data", mountPath: "/app/data" }
        ports:
        - { name: "http", containerPort: 5032, protocol: "TCP" }
        - { name: "rpc", containerPort: 5042, protocol: "TCP" }
        # command: [ tail, -f, /etc/hosts ]
        command: ["./target/main"]
        args: ["-release", "-config=configs/dev.yaml", "-http_addr=0.0.0.0:5032", "-rpc_addr=0.0.0.0:5042"]
