services/demo-api/deployments/demo-api.loadbalancer.dev.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: demo-api
spec:
  type: LoadBalancer
  # clusterIP: 10.107.98.176
  selector: { app: "demo-api" }
  ports:
  - { name: http, protocol: TCP, port: 5032, targetPort: 5032 }
  - { name: rpc, protocol: TCP, port: 5042, targetPort: 5042 }
