services/demo-api/deployments/k8s_cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: demo-api
spec:
  type: ClusterIP
  # clusterIP: 10.107.98.176
  selector: { app: demo-api }
  ports:
  - { name: http, protocol: TCP, port: 5032, targetPort: 5032 }
  - { name: rpc, protocol: TCP, port: 5042, targetPort: 5042 }
