services/demo-api/deployments/k8s_node-port.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: demo-api
spec:
  type: NodePort
  selector: { app: demo-api }
  ports:
  ## nodePort port range: 30000-32767
  ## port: communcation between nodes, targetPort: pod port, nodePort: service node port
  - { name: http, protocol: TCP, port: 5032, targetPort: 5032, nodePort: 30032 }
  - { name: grpc, protocol: TCP, port: 5042, targetPort: 5042, nodePort: 30042 }
