services/demo-api/deployments/demo-api.k8s.dev.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: demo-api
spec:
  type: ClusterIP
  # clusterIP: 10.107.98.176
  selector: { app: "demo-api" }
  ports:
  - { name: http, protocol: TCP, port: 5032, targetPort: 5032 }
  - { name: rpc, protocol: TCP, port: 5042, targetPort: 5042 }

#---
#apiVersion: v1
#kind: Service
#metadata:
#  namespace: dev
#  name: demo-api
#spec:
#  type: LoadBalancer
#  # clusterIP: 10.107.98.176
#  selector: { app: "demo-api" }
#  ports:
#  - { name: http, protocol: TCP, port: 5032, targetPort: 5032 }
#  - { name: rpc, protocol: TCP, port: 5042, targetPort: 5042 }

#---
#apiVersion: v1
#kind: Service
#metadata:
#  namespace: dev
#  name: demo-api
#spec:
#  type: NodePort
#  selector: { app: demo-api }
#  ports:
#  ## nodePort port range: 30000-32767
#  ## port: communcation between nodes, targetPort: pod port, nodePort: service node port
#  - { name: http, protocol: TCP, port: 5032, targetPort: 5032, nodePort: 30032 }
#  - { name: grpc, protocol: TCP, port: 5042, targetPort: 5042, nodePort: 30042 }

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dev
  name: demo-api
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/limit-connections: "1024"
    nginx.ingress.kubernetes.io/limit-rps: "256"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: demo-api.dev.k8s.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service: { name: demo-api, port: { number: 5032 } }

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: demo-api
  labels: { app: "demo-api" }
spec:
  replicas: 3
  selector:
    matchLabels: { app: "demo-api" }
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate: { maxSurge: 1, maxUnavailable: 0 }
  template:
    metadata:
      labels: { app: "demo-api" }
    spec:
      restartPolicy: Always
      # affinity: ...
      # nodeSelector:
      #   node-role: worker
      terminationGracePeriodSeconds: 5
      volumes:
      - name: config
        configMap: { name: demo-api }
      - name: local
        hostPath: { path: "/data/k8s/local", type: "DirectoryOrCreate" }
      - name: pvc
        persistentVolumeClaim: { claimName: "k8s-cp01" }
      containers:
      - name: demo-api
        # image: registry.cn-shanghai.aliyuncs.com/d2jvkpn/demo-api:master-0.1.0@sha256xxxx
        image: registry.cn-shanghai.aliyuncs.com/d2jvkpn/demo-api:dev
        ## imagePullPolicy: IfNotPresent, Always, Never
        imagePullPolicy: "Always"
        resources:
          requests: { cpu: "200m", memory: "128Mi", ephemeral-storage: "2Gi" }
          limits: { cpu: "1000m", memory: "512Mi", ephemeral-storage: "4Gi" }
        livenessProbe:
          grpc: { port: 5042 }
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
          ## HTTP Status >= 200 and < 400
          # httpGet:
          #   path: "/healthz"
          #   port: 5032
          #   httpHeaders:
          #   - { name: Custom-Header, value: Awesome }
        volumeMounts:
        ## not /app/configs/dev.yaml
        - { name: config, mountPath: /app/configs, readOnly: true }
        - { name: local, subPathExpr: "$(K8S_PodName)/logs", mountPath: "/app/logs" }
        - { name: pvc, subPathExpr: "$(K8S_PodName)/data", mountPath: "/app/data" }
        ports:
        - { name: "http", containerPort: 5032, protocol: "TCP" }
        - { name: "rpc", containerPort: 5042, protocol: "TCP" }
        # command: [ tail, -f, /etc/hosts ]
        # workingDir: /app
        command: ["./target/main"]
        args: ["-release", "-config=configs/dev.yaml", "-http.addr=0.0.0.0:5032", "-rpc.addr=0.0.0.0:5042"]
